Resolves: tdf#100852 update miBroadcasterPos before copying it

Change-Id: I9ab9acfb0871355ceb2c3c83f51e7ba05a74d8f2